Closed Bug 1079317 Opened 10 years ago Closed 10 years ago

Fix some more bad implicit constructors in DOM

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
      No description provided.
Attachment #8501127 - Flags: review?(amarchesini)
Attachment #8501127 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/24045f0d8b0d
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.