Bug 1079317 - Fix some more bad implicit constructors in DOM; r=baku